# ragbit_deploy_azure_function

./: .funcignore  README.md  api.py  function_app.py  pyproject.toml  requirements.txt
.github/workflows/: deploy_to_azure.yml  main_coolragbit.yml
backend/: rag.py
frontend/: app.py
knowledge_base/articles.lance/_transactions/: 0-885fdc60-10ce-4cbb-a394-a790e165dc0a.txn  1-e574ae6e-c05c-475f-b3ed-0e962b5508ba.txn  2-26a817d8-0953-48ec-97ba-a20858bb4f20.txn  3-8c1ed39e-45fa-419d-bc8a-4898a4f62a35.txn  4-ce37cbb0-1836-4147-bf06-63650bf03e20.txn  5-32617c56-5ade-42a1-bf75-63cbc7db7c77.txn  6-416c9a15-9840-49e2-9c02-553e91ec0d63.txn  7-7648953e-aeaa-4668-a387-9a903edaaddc.txn  8-a9f0ee3e-0bdf-4bd8-9d16-a19763290161.txn
